@@ -1926,8 +1926,9 @@ typedef struct {
 	bool multi_prog;
 	bool no_alloc;
 	uint32_t slurmd_debug;  /* remote slurmd debug level */
-	uint32_t pack_offset;	/* Pack job offset or NO_VAL */
+	uint32_t node_offset;	/* Pack job node offset or NO_VAL */
 	uint32_t pack_ntasks;	/* total task count for entire pack job */
+	uint32_t pack_offset;	/* Pack job offset or NO_VAL */
 	uint32_t task_offset;	/* Pack job tsk offset or NO_VAL */
 	bool parallel_debug;
 	uint32_t profile;	/* Level of acct_gather_profile {all | none} */
