@@ -676,34 +676,34 @@ int setup_env(env_t *env, bool preserve_env)
 		}
 	}
 
-	if (!(cluster_flags & CLUSTER_FLAG_BG)
-	    && !(cluster_flags & CLUSTER_FLAG_CRAYXT)) {
-		/* These aren't relavant to a system not using Slurm
-		   as the launcher.  Since there isn't a flag for that
-		   we check for the flags we do have.
-		*/
-		if (env->task_pid
-		    && setenvf(&env->env, "SLURM_TASK_PID", "%d",
+	if (!(cluster_flags & CLUSTER_FLAG_BG) &&
+	    !(cluster_flags & CLUSTER_FLAG_CRAYXT)) {
+		/*
+		 * These aren't relavant to a system not using Slurm as the
+		 * launcher. Since there isn't a flag for that we check for
+		 * the flags we do have.
+		 */
+		if (env->task_pid &&
+		    setenvf(&env->env, "SLURM_TASK_PID", "%d",
 			       (int)env->task_pid)) {
 			error("Unable to set SLURM_TASK_PID environment "
 			      "variable");
 			rc = SLURM_FAILURE;
 		}
-		if (env->nodeid >= 0
-		    && setenvf(&env->env, "SLURM_NODEID", "%d", env->nodeid)) {
+		if ((env->nodeid >= 0) &&
+		    setenvf(&env->env, "SLURM_NODEID", "%d", env->nodeid)) {
 			error("Unable to set SLURM_NODEID environment");
 			rc = SLURM_FAILURE;
 		}
 
-		if (env->procid >= 0
-		    && setenvf(&env->env, "SLURM_PROCID", "%d", env->procid)) {
+		if ((env->procid >= 0) &&
+		    setenvf(&env->env, "SLURM_PROCID", "%d", env->procid)) {
 			error("Unable to set SLURM_PROCID environment");
 			rc = SLURM_FAILURE;
 		}
 
-		if (env->localid >= 0
-		    && setenvf(&env->env, "SLURM_LOCALID", "%d",
-			       env->localid)) {
+		if ((env->localid >= 0) &&
+		    setenvf(&env->env, "SLURM_LOCALID", "%d", env->localid)) {
 			error("Unable to set SLURM_LOCALID environment");
 			rc = SLURM_FAILURE;
 		}
@@ -773,8 +773,8 @@ int setup_env(env_t *env, bool preserve_env)
 		setenvf (&env->env, "SLURM_LAUNCH_NODE_IPADDR", "%s", addrbuf);
 	}
 
-	if (env->sgtids
-	   && setenvf(&env->env, "SLURM_GTIDS", "%s", env->sgtids)) {
+	if (env->sgtids &&
+	    setenvf(&env->env, "SLURM_GTIDS", "%s", env->sgtids)) {
 		error("Unable to set SLURM_GTIDS environment variable");
 		rc = SLURM_FAILURE;
 	}
