@@ -766,6 +766,7 @@ typedef struct job_step_create_response_msg {
 typedef struct launch_tasks_request_msg {
 	uint32_t  job_id;
 	uint32_t  job_step_id;
+	uint32_t  node_offset;	/* pack job node offset of NO_VAL */
 	uint32_t  pack_ntasks;	/* total task count for entire pack job */
 	uint32_t  pack_offset;	/* pack job offset of NO_VAL */
 	uint32_t  task_offset;	/* pack job task ID offset of NO_VAL */
