@@ -10261,6 +10261,7 @@ _pack_launch_tasks_request_msg(launch_tasks_request_msg_t * msg, Buf buffer,
 	if (protocol_version >= SLURM_17_11_PROTOCOL_VERSION) {
 		pack32(msg->job_id, buffer);
 		pack32(msg->job_step_id, buffer);
+		pack32(msg->node_offset, buffer);
 		pack32(msg->pack_ntasks, buffer);
 		pack32(msg->pack_offset, buffer);
 		pack32(msg->task_offset, buffer);
@@ -10525,8 +10526,8 @@ _pack_launch_tasks_request_msg(launch_tasks_request_msg_t * msg, Buf buffer,
 						     protocol_version);
 		}
 	} else {
-		error("_pack_launch_tasks_request_msg: protocol_version "
-		      "%hu not supported", protocol_version);
+		error("%s: protocol_version %hu not supported",
+		      __func__, protocol_version);
 	}
 }
 
@@ -10547,6 +10548,7 @@ _unpack_launch_tasks_request_msg(launch_tasks_request_msg_t **
 	if (protocol_version >= SLURM_17_11_PROTOCOL_VERSION) {
 		safe_unpack32(&msg->job_id, buffer);
 		safe_unpack32(&msg->job_step_id, buffer);
+		safe_unpack32(&msg->node_offset, buffer);
 		safe_unpack32(&msg->pack_ntasks, buffer);
 		safe_unpack32(&msg->pack_offset, buffer);
 		safe_unpack32(&msg->task_offset, buffer);
@@ -10658,6 +10660,7 @@ _unpack_launch_tasks_request_msg(launch_tasks_request_msg_t **
 		int rc;
 		safe_unpack32(&msg->job_id, buffer);
 		safe_unpack32(&msg->job_step_id, buffer);
+		msg->node_offset = NO_VAL;
 		msg->pack_ntasks = NO_VAL;
 		msg->pack_offset = NO_VAL;
 		msg->task_offset = NO_VAL;
@@ -10788,6 +10791,7 @@ _unpack_launch_tasks_request_msg(launch_tasks_request_msg_t **
 		uint8_t pty = 0, buffered_stdio = 0, labelio = 0;
 		safe_unpack32(&msg->job_id, buffer);
 		safe_unpack32(&msg->job_step_id, buffer);
+		msg->node_offset = NO_VAL;
 		msg->pack_ntasks = NO_VAL;
 		msg->pack_offset = NO_VAL;
 		msg->task_offset = NO_VAL;
@@ -10914,8 +10918,8 @@ _unpack_launch_tasks_request_msg(launch_tasks_request_msg_t **
 		if (labelio)
 			msg->flags |= LAUNCH_LABEL_IO;
 	} else {
-		error("_unpack_launch_tasks_request_msg: protocol_version "
-		      "%hu not supported", protocol_version);
+		error("%s: protocol_version %hu not supported",
+		      __func__, protocol_version);
 		goto unpack_error;
 	}
 	return SLURM_SUCCESS;
