@@ -133,6 +133,7 @@ typedef struct {
 	uint32_t       nnodes; /* number of nodes in current job            */
 	uint32_t       ntasks; /* total number of tasks in current job      */
 	uint32_t       nodeid; /* relative position of this node in job     */
+	uint32_t       node_offset; 	/* pack job node offset or NO_VAL   */
 	uint32_t       node_tasks; /* number of tasks on *this* node        */
 	uint32_t       pack_ntasks;	/* total task count for entire pack job */
 	uint32_t       pack_offset; 	/* pack job offset or NO_VAL        */
