@@ -679,6 +679,7 @@ static int _create_job_step(srun_job_t *job, bool use_all_cpus,
 {
 	ListIterator opt_iter = NULL, job_iter;
 	opt_t *opt_local = &opt;
+	uint32_t node_offset = 0;
 	uint32_t pack_offset = 0, pack_ntasks = 0, task_offset = 0;
 	int rc = 0;
 
@@ -699,6 +700,7 @@ static int _create_job_step(srun_job_t *job, bool use_all_cpus,
 				fatal("%s: opt_list too short", __func__);
 			job->pack_offset = pack_offset;
 			if (opt.mpi_combine) {
+				job->node_offset = node_offset;
 				job->pack_ntasks = pack_ntasks;
 				job->task_offset = task_offset;
 			} else
@@ -706,6 +708,7 @@ static int _create_job_step(srun_job_t *job, bool use_all_cpus,
 			rc = create_job_step(job, use_all_cpus, opt_local);
 			if (rc < 0)
 				break;
+			node_offset += job->nhosts;
 			task_offset += job->ntasks;
 		}
 		list_iterator_destroy(job_iter);
